chore(playstore-publish.yaml): update push event tags to exclude debug and release branches for Play Store publishing workflow

--- a/.gitea/workflows/playstore-publish.yaml
+++ b/.gitea/workflows/playstore-publish.yaml
@@ -3,7 +3,9 @@ name: Publish Android to Play Store
 on:
   push:
     tags:
-      - 'v*'  
+      - 'v*'
+      - '!*-debug'
+      - '!*-release'
 
 jobs:
   publish-android:
