Update Info.plist to set encryption compliance to false and remove unused keys

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,8 +56,6 @@
 		<string>remote-notification</string>
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
-	<true/>
-	<key>ITSEncryptionExportComplianceCode</key>
-	<string></string>
+	<false/>
 </dict>
 </plist>
