--- a/.gitea/workflows/tagged_build.yaml
+++ b/.gitea/workflows/tagged_build.yaml
@@ -18,6 +18,22 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+      - name: Prepare environment configuration
+        run: |
+          TAG=$(git describe --tags --always)
+          TAG_NO_V=$(echo "$TAG" | sed 's/^v//')
+          BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
+          ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
+
+          echo "Detected build environment: $ENV"
+
+          if [ "$ENV" = "qa" ]; then
+            cp .env.qa .env
+          elif [ "$ENV" = "prod" ]; then
+            cp .env.prod .env
+          else
+            echo "Unknown environment '$ENV', keeping existing .env file"
+          fi
       - name: Verify Flutter Installation
         run: flutter doctor -v
       - name: Get Project Dependencies
@@ -68,12 +84,19 @@ jobs:
         run: |
           REPO_VERSION=$(git describe --tags --always | sed 's/^v//')
           echo $REPO_VERSION
+          TAG=$(git describe --tags --always)
+          TAG_NO_V=$(echo "$TAG" | sed 's/^v//')
+          BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
+          BUILD=$(echo "$BUILD_AND_ENV" | cut -d '-' -f1)
+          ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
           flutter build ipa --release \
             --no-pub \
             --obfuscate \
             --codesign \
             --split-debug-info=split_debug_info/ \
-            --dart-define-from-file=.env
+            --dart-define-from-file=.env.${ENV} \
+            --flavor $ENV \
+            --build-number=$BUILD
       - name: Upload to TestFlight
         run: |
           cd ios
@@ -94,6 +117,23 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+      - name: Prepare environment configuration
+        run: |
+          TAG=$(git describe --tags --always)
+          TAG_NO_V=$(echo "$TAG" | sed 's/^v//')
+          BUILD_AND_ENV=$(echo "$TAG_NO_V" | cut -d '+' -f2)
+          ENV=$(echo "$BUILD_AND_ENV" | cut -d '-' -f2)
+
+          echo "Detected build environment: $ENV"
+
+          if [ "$ENV" = "qa" ]; then
+            echo "PLAY_TRACK=internal" >> $GITHUB_ENV
+          elif [ "$ENV" = "prod" ]; then
+            echo "PLAY_TRACK=production" >> $GITHUB_ENV
+          else
+            echo "Unknown environment '$ENV'"
+            echo "PLAY_TRACK=internal" >> $GITHUB_ENV
+          fi
       - name: Decode Android Key Store
         run: echo $BASE64_KEYSTORE | base64 -d | tee android/app/zarply-release.keystore > /dev/null
       - name: Create key.properties
@@ -116,7 +156,9 @@ jobs:
           flutter build appbundle --release \
             --obfuscate \
             --split-debug-info=split_debug_info/ \
-            --build-name=$VERSION
+            --build-name=$VERSION \
+            --dart-define-from-file=.env.$ENV \
+            --flavor $ENV
       - name: Save Artifacts
         run: |
           mkdir artifacts
@@ -138,7 +180,7 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: za.co.zarply
           releaseFiles: artifacts/zarply.aab
-          track: internal
+          track: ${{ env.PLAY_TRACK }}
           status: completed
           mappingFile: artifacts/appbundle_mapping.txt
           debugSymbols: artifacts/appbundle_symbols.zip
