--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
     - images/payed.png
     - images/received.png
     - .env
+    - .env.prod
+    - .env.qa
 
   # TODO: ask a designer to provide fonts for our project and specify them here
   # To add custom fonts to your application, add a fonts section here,
