Add QA flavor support for mobile builds
- Introduced flutter_launcher_icons configuration for QA with specific icon paths for Android and iOS.
- Updated mobile build workflow to trigger on debug tags.
- Added new launcher icons for various resolutions in both Android and iOS.
- Updated iOS project settings to use the new AppIcon-qa.
- Enhanced logout functionality in AuthProvider to handle storage errors.

--- a/.gitea/workflows/on_push_mobile_builds.yaml
+++ b/.gitea/workflows/on_push_mobile_builds.yaml
@@ -2,7 +2,8 @@ name: On Push Mobile Builds (iOS QA & Prod)
 
 on:
   push:
-
+    tags:
+      - '*-debug'
 jobs:
   # Android jobs commented out - uncomment to re-enable.
   # android_qa_build:
