Update mobile build workflows to trigger on all branches instead of debug tags; streamline configurations for better maintainability.

--- a/.gitea/workflows/on_push_mobile_builds.yaml
+++ b/.gitea/workflows/on_push_mobile_builds.yaml
@@ -2,8 +2,8 @@ name: On Push Mobile Builds (iOS QA & Prod)
 
 on:
   push:
-    tags:
-      - '*-debug'
+    branches:
+      - '*'
 jobs:
   # Android jobs commented out - uncomment to re-enable.
   # android_qa_build:
